Fix: fixing incl-excl + filter

--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="itemBox">
+    <div class="itemBox JS_multiSelector__box">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
           <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitle">
@@ -39,10 +39,10 @@
           <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
             <div class="itemBoxTable">
               <div class="itemBoxBody itemBoxBody--sortable">
-                <ul class="itemBoxTable__bodyRow">
+                <ul class="itemBoxTable__bodyRow JS_filterableCell">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                      <span class="outer"><span class="inner">Arnaud</span></span>
+                      Arnaud
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
@@ -120,7 +120,7 @@
                 <div class="itemBox itemBox--children">
                   <div class="itemBoxTable">
                     <div class="itemBoxBody">
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow JS_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Arnaud</div>
                         </li>
@@ -130,7 +130,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow JS_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Esteban</div>
                         </li>
@@ -140,7 +140,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow JS_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Nóra</div>
                         </li>
@@ -150,7 +150,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow JS_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Paul</div>
                         </li>
