Fix: appnav filter

--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -7,7 +7,7 @@
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                 <div class="itemBoxTable__bodyCellInner">
 
-                  <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through smarlists">
+                  <input type="search" class="JS_appNav__filterInput" placeholder="filter through smarlists">
 
                 </div>
             </li>
