--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -65,11 +65,11 @@
   padding: 2px;
   background-color: #D7D7D7;
   color: #000;
-  border-radius: 30px;
-  white-space: nowrap;
+  border-radius: 15px;
   font-size: 0;
   max-width: 100%;
   line-height: initial;
+  white-space: nowrap;
 
   &__item {
     position: relative;
@@ -153,6 +153,13 @@
       letter-spacing: normal;
       font-size: 12px;
       font-weight: 400;
+    }
+  }
+
+  &--expanded {
+    &.pmx-selector--toggleSelect {
+      height: auto;
+      white-space: normal;
     }
   }
 
