--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -186,7 +186,9 @@
 
   &--multiSelect {
     .pmx-selector__item {
+      overflow: visible;
       border-radius: 0;
+      margin: 0 1px 0 0;
 
       &:first-child {
         border-top-left-radius: 30px;
@@ -196,15 +198,16 @@
       &:last-child {
         border-top-right-radius: 30px;
         border-bottom-right-radius: 30px;
+        margin: 0;
       }
 
       &:not(:last-child)::after {
         content: '';
         position: absolute;
         top: 0;
-        right: 0;
-        height: 30px;
-        border-right: 1px dashed #808080;
+        right: -1px;
+        height: 26px;
+        border-right: 1px dashed #a4a4a4;
       }
     }
   }
