--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -71,22 +71,27 @@
   line-height: initial;
   white-space: nowrap;
 
+  vertical-align: top;
+
   &__item {
     position: relative;
     display: inline-block;
     height: 26px;
     min-width: 26px;
     max-width: 100%;
-    padding: 2px 6px;
+    padding: 2px 3px;
     border-radius: 30px;
     overflow: hidden;
     font-size: 16px;
     cursor: pointer;
     transition: all .3s ease-in-out;
     opacity: .5;
+    -webkit-filter: saturate(0) brightness(0);
     filter: saturate(0) brightness(0);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+
+    vertical-align: top;
 
     &:hover {
       opacity: .7;
@@ -123,12 +128,13 @@
       display: inline-block;
       padding: 0 3px;
 
-      &:first-child {
-        padding-left: 0;
-      }
-
-      &:last-child {
-        padding-right: 0;
+      &--prefix {
+        border-radius: 15px;
+        padding: 0 5px;
+        line-height: 20px;
+        min-height: 20px;
+        min-width: 20px;
+        text-align: center;
       }
 
       &--label  {
@@ -137,6 +143,12 @@
         font-size: 10px;
         font-weight: 600;
         letter-spacing: .7px;
+
+        + .pmx-selector__blockSeperator {
+          margin: 0 3px;
+          height: 16px;
+          border-right: 1px dotted #D5D5D5;
+        }
       }
 
       &--field {
@@ -144,15 +156,6 @@
         white-space: nowrap;
         text-overflow: ellipsis;
       }
-    }
-
-    &Seperator {
-      padding: 0 3px;
-      color: #A2A2A2;
-      line-height: initial;
-      letter-spacing: normal;
-      font-size: 12px;
-      font-weight: 400;
     }
   }
 
@@ -188,7 +191,6 @@
     .pmx-selector__item {
       overflow: visible;
       border-radius: 0;
-      margin: 0 1px 0 0;
 
       &:first-child {
         border-top-left-radius: 30px;
@@ -205,9 +207,9 @@
         content: '';
         position: absolute;
         top: 0;
-        right: -1px;
+        right: 0;
         height: 26px;
-        border-right: 1px dashed #a4a4a4;
+        border-right: 1px dashed #A1A1A1;
       }
     }
   }
