--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -10,7 +10,8 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.stickytableheaders.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
 
-
+<!-- MULITPLE SCROLLABLE CONTENT -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/multipleScrollable.js"></script>
 
 {% if page.title == 'New App' %}
   <!-- Sticky scroll -->
