--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,13 +29,13 @@
         </div>
 
         <div class="item-body cf">
-          <div class="item-progress">
+          <div class="item-progress ms-fixed">
             <div class="item-progress__inner">
               {% include blocks/item-progress.html %}
             </div>
           </div>
 
-          <div class="item-main">
+          <div class="item-main ms-fixed">
             <div class="item-main__inner">
               {% include blocks/item-main.html %}
             </div>
