--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -61,6 +61,7 @@
             <li class="itemBoxTable__bodyCell" style="flex-grow: 3;" data-flex="3">
                 <div class="itemBoxTable__bodyCellInner">
 
+                  <div class="pmx-field__inner">
                     <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
                       <div class="pmx-selector__item pmx-selector__item--selected">
                         <div class="pmx-selector__block">
@@ -68,6 +69,7 @@
                         </div>
                       </div>
                     </div>
+                  </div>
 
                 </div>
             </li>
@@ -87,6 +89,7 @@
             <li class="itemBoxTable__bodyCell" style="flex-grow: 3;" data-flex="3">
                 <div class="itemBoxTable__bodyCellInner">
 
+                  <div class="pmx-field__inner">
                     <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
                       <div class="pmx-selector__item pmx-selector__item--selected">
                         <div class="pmx-selector__block">
@@ -94,7 +97,8 @@
                         </div>
                       </div>
                     </div>
-
+                  </div>
+                  
                 </div>
             </li>
         </ul>
@@ -161,36 +165,41 @@
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 3;" data-flex="3">
                       <div class="itemBoxTable__bodyCellInner">
 
+                        <div class="pmx-field__inner">
                           <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
                             <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
                               <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
-                                <span class="pmx-selector__blockSeperator">•</span>
+                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+                                <span class="pmx-selector__blockSeperator"></span>
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
                               </div>
                             </div>
+                            <span class="pmx-selector__itemSeperator"></span>
                             <div class="pmx-selector__item  JS_selectorItem">
                               <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">ग़</span>
-                                <span class="pmx-selector__blockSeperator">•</span>
+                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
+                                <span class="pmx-selector__blockSeperator"></span>
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
                               </div>
                             </div>
+                            <span class="pmx-selector__itemSeperator"></span>
                             <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
                               <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #e30022;">ग़</span>
-                                <span class="pmx-selector__blockSeperator">•</span>
+                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #e30022; color: #FFF;">ग़</span>
+                                <span class="pmx-selector__blockSeperator"></span>
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</span>
                               </div>
                             </div>
+                            <span class="pmx-selector__itemSeperator"></span>
                             <div class="pmx-selector__item  JS_selectorItem">
                               <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
-                                <span class="pmx-selector__blockSeperator">•</span>
+                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
+                                <span class="pmx-selector__blockSeperator"></span>
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</span>
                               </div>
                             </div>
                           </div>
+                        </div>
 
                       </div>
                   </li>
@@ -253,9 +262,9 @@
                           <div class="itemBoxTable__headCellInner">
 
                             <!-- TODO -->
-                            <div class="field field--value">
-                              <div class="field__label">filtered value</div>
-                              <div class="field__value">
+                            <div class="itemBoxTable__field itemBoxTable__field--value">
+                              <div class="itemBoxTable__fieldLabel">filtered value</div>
+                              <div class="itemBoxTable__fieldValue">
                                 <input value="lorem ipsum dolor sit amet">
                               </div>
                             </div>
@@ -266,9 +275,9 @@
                           <div class="itemBoxTable__headCellInner">
 
                             <!-- TODO -->
-                            <div class="field field--placeholder">
-                              <div class="field__label">Placeholder</div>
-                              <div class="field__value">
+                            <div class="itemBoxTable__field itemBoxTable__field--placeholder">
+                              <div class="itemBoxTable__fieldLabel">Placeholder</div>
+                              <div class="itemBoxTable__fieldValue">
                                 <input value="Child 2 Head 2 lorem ipsum dolor sit amet">
                               </div>
                             </div>
@@ -279,9 +288,9 @@
                           <div class="itemBoxTable__headCellInner">
 
                             <!-- TODO -->
-                            <div class="field field--focus">
-                              <div class="field__label">Assigned to</div>
-                              <div class="field__value">
+                            <div class="itemBoxTable__field itemBoxTable__field--focus">
+                              <div class="itemBoxTable__fieldLabel">Assigned to</div>
+                              <div class="itemBoxTable__fieldValue">
                                 <input value="A focused cell" placeholder="Placeholder">
                               </div>
                             </div>
