--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -20,7 +20,7 @@
       <div class="itemBoxTable">
         <div class="itemBoxBody">
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
-            <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+            <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Not started</div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
@@ -30,7 +30,7 @@
             </li>
           </ul>
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
-            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Ongoing</div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
@@ -40,7 +40,7 @@
             </li>
           </ul>
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
-            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+            <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">Done</div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
