--- a/sass/app.scss
+++ b/sass/app.scss
@@ -11,8 +11,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont,
                 "tenforce", Helvetica, Arial, sans-serif,
                 "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 14px;
-
   overflow-x: hidden;
   background-color: #2C5386;
   min-height: 100vh;
