added filter page

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -35,6 +35,7 @@ body {
 }
 body.page-Components,
 body.page-Itembox,
+body.page-Filter,
 body.page-Tag-picker {
   position: relative;
   background-color: #FFF;
