--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -81,7 +81,7 @@
               </div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                <div class="itemBoxTable__bodyCellInner">Contruction ܟ Reports</div>
+                <div class="itemBoxTable__bodyCellInner">Contruction Reports</div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                 <div class="itemBoxTable__bodyCellInner">34342-34252345-342543523-343213124</div>
@@ -98,7 +98,7 @@
                       </div>
                     </div>
                   </div>
-                  
+
                 </div>
             </li>
         </ul>
