--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -1,5 +1,16 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-1">
 
+    <div class="pmx-field-handlers">
+      <div class="pmx-field-handlers__errors">
+      </div>
+      <div class="pmx-field-handlers__actions">
+      </div>
+      <div class="pmx-field-handlers__tooltip">
+        <p>Actual invoice amount</p>
+        <p>For fixed price projects and service requests (no timesheets): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
+      </div>
+    </div>
+
     <div class="itemBox JS_multiSelector__boxx">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
