--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -14,15 +14,15 @@
       </div>
     </div>
 
-    <div class="pmx-selector  JS_selector pmx-selector--expanded pmx-selector--multiSelect">
-      <div class="pmx-selector__item  JS_selectorItem pmx-selector__item--selected JS_toggle-progress">
+    <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect JS_selector">
+      <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_toggle-progress">
         <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ण</span>
+          <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ण</span>
         </div>
       </div>
-      <div class="pmx-selector__item  JS_selectorItem JS_toggle-comments">
+      <div class="pmx-selector__item JS_selectorItem JS_toggle-comments">
         <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">स</span>
+          <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">स</span>
         </div>
       </div>
     </div>
