update icons and selector component

--- a/_includes/blocks/item-comments.html
+++ b/_includes/blocks/item-comments.html
@@ -12,7 +12,7 @@
   <div class="tabs-nav">
     <ul>
       <span class="tab__active-link-bar"></span>
-      <li><a href="#" class="tabs-nav__link active" tabindex="1">स</a></li>
+      <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1">स</a></li>
       <li><a href="#" class="tabs-nav__link" tabindex="2">ऑ</a></li>
       <li><a href="#" class="tabs-nav__link" tabindex="3">झ</a></li>
     </ul>
