--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -61,11 +61,13 @@
             <li class="itemBoxTable__bodyCell" style="flex-grow: 3;" data-flex="3">
                 <div class="itemBoxTable__bodyCellInner">
 
-                  <div class="pmx-field__inner">
-                    <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
+                  <div class="pmx-field">
+                    <div class="pmx-field__inner">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
+                        <div class="pmx-selector__item pmx-selector__item--selected">
+                          <div class="pmx-selector__block">
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -89,11 +91,13 @@
             <li class="itemBoxTable__bodyCell" style="flex-grow: 3;" data-flex="3">
                 <div class="itemBoxTable__bodyCellInner">
 
-                  <div class="pmx-field__inner">
-                    <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
+                  <div class="pmx-field">
+                    <div class="pmx-field__inner">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
+                        <div class="pmx-selector__item pmx-selector__item--selected">
+                          <div class="pmx-selector__block">
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -165,37 +169,39 @@
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 3;" data-flex="3">
                       <div class="itemBoxTable__bodyCellInner">
 
-                        <div class="pmx-field__inner">
-                          <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
-                            <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
-                              <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
-                                <span class="pmx-selector__blockSeperator"></span>
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
+                        <div class="pmx-field">
+                          <div class="pmx-field__inner">
+                            <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
+                              <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+                                <div class="pmx-selector__block">
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
+                                </div>
                               </div>
-                            </div>
-                            <span class="pmx-selector__itemSeperator"></span>
-                            <div class="pmx-selector__item  JS_selectorItem">
-                              <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
-                                <span class="pmx-selector__blockSeperator"></span>
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
+                              <span class="pmx-selector__itemSeperator"></span>
+                              <div class="pmx-selector__item  JS_selectorItem">
+                                <div class="pmx-selector__block">
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
+                                </div>
                               </div>
-                            </div>
-                            <span class="pmx-selector__itemSeperator"></span>
-                            <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
-                              <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #e30022; color: #FFF;">ग़</span>
-                                <span class="pmx-selector__blockSeperator"></span>
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</span>
+                              <span class="pmx-selector__itemSeperator"></span>
+                              <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+                                <div class="pmx-selector__block">
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #e30022; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</span>
+                                </div>
                               </div>
-                            </div>
-                            <span class="pmx-selector__itemSeperator"></span>
-                            <div class="pmx-selector__item  JS_selectorItem">
-                              <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
-                                <span class="pmx-selector__blockSeperator"></span>
-                                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</span>
+                              <span class="pmx-selector__itemSeperator"></span>
+                              <div class="pmx-selector__item  JS_selectorItem">
+                                <div class="pmx-selector__block">
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockSeperator"></span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</span>
+                                </div>
                               </div>
                             </div>
                           </div>
