--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -164,6 +164,7 @@
     height: 22px;
     padding: 2px 4px;
     display: flex;
+    font-family: 'tenforce', sans-serif;
     align-items: center;
 
     /*
